// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputElement completion should complete in the middle of text 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "the name or URN",
  },
  Object {
    "name": "contact.uuid",
    "summary": "the UUID of the contact",
  },
  Object {
    "name": "contact.id",
    "summary": "the numeric ID of the contact",
  },
  Object {
    "name": "contact.first_name",
    "summary": "the first name of the contact",
  },
  Object {
    "name": "contact.name",
    "summary": "the name of the contact",
  },
  Object {
    "name": "contact.language",
    "summary": "the language of the contact as 3-letter ISO code",
  },
  Object {
    "name": "contact.created_on",
    "summary": "the creation date of the contact",
  },
  Object {
    "name": "contact.urns",
    "summary": "the URNs belonging to the contact",
  },
  Object {
    "name": "contact.urn",
    "summary": "the preferred URN of the contact",
  },
  Object {
    "name": "contact.groups",
    "summary": "the groups the contact belongs to",
  },
  Object {
    "name": "contact.fields",
    "summary": "the custom field values of the contact",
  },
  Object {
    "name": "contact.channel",
    "summary": "the preferred channel of the contact",
  },
]
`;

exports[`TextInputElement completion should handle completion w/ "Tab" key 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "the name or URN",
  },
  Object {
    "name": "contact.uuid",
    "summary": "the UUID of the contact",
  },
  Object {
    "name": "contact.id",
    "summary": "the numeric ID of the contact",
  },
  Object {
    "name": "contact.first_name",
    "summary": "the first name of the contact",
  },
  Object {
    "name": "contact.name",
    "summary": "the name of the contact",
  },
  Object {
    "name": "contact.language",
    "summary": "the language of the contact as 3-letter ISO code",
  },
  Object {
    "name": "contact.created_on",
    "summary": "the creation date of the contact",
  },
  Object {
    "name": "contact.urns",
    "summary": "the URNs belonging to the contact",
  },
  Object {
    "name": "contact.urn",
    "summary": "the preferred URN of the contact",
  },
  Object {
    "name": "contact.groups",
    "summary": "the groups the contact belongs to",
  },
  Object {
    "name": "contact.fields",
    "summary": "the custom field values of the contact",
  },
  Object {
    "name": "contact.channel",
    "summary": "the preferred channel of the contact",
  },
]
`;

exports[`TextInputElement filtering should bring up completion menu for top level options 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "the contact",
  },
  Object {
    "name": "fields",
    "summary": "the custom field values of the contact",
  },
  Object {
    "name": "urns",
    "summary": "the URN values of the contact",
  },
  Object {
    "name": "results",
    "summary": "the current run results",
  },
  Object {
    "name": "input",
    "summary": "the current input from the contact",
  },
  Object {
    "name": "run",
    "summary": "the current run",
  },
  Object {
    "name": "child",
    "summary": "the last child run",
  },
  Object {
    "name": "parent",
    "summary": "the parent of the run",
  },
  Object {
    "name": "webhook",
    "summary": "the parsed JSON response of the last webhook call",
  },
  Object {
    "name": "trigger",
    "summary": "the trigger that started this session",
  },
]
`;

exports[`TextInputElement filtering should show filter at the second level 1`] = `
Array [
  Object {
    "name": "contact.first_name",
    "summary": "the first name of the contact",
  },
]
`;

exports[`TextInputElement filtering should show filter options 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "the contact",
  },
]
`;

exports[`TextInputElement function context should use the most recent incomplete function 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "the contact",
  },
]
`;

exports[`TextInputElement navigation should filter after tabbing 1`] = `
Array [
  Object {
    "name": "contact.first_name",
    "summary": "the first name of the contact",
  },
]
`;
